# bmux

./: .dockerignore  .gitignore  .markdownlint.json  .markdownlintignore  .mdformat.toml  AGENTS.md  Cargo.toml  README.md  TESTING.md  clippier.toml  deny.toml  flake.nix  shell.nix  taplo.toml
.cursor/rules/: bmux-architecture.mdc  bmux-overview.mdc  cargo.mdc  deployment-infrastructure.mdc  mdc.mdc  rust-development.mdc
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  deploy-packages-worker.yml  docs-check.yml  docs-deploy.yml  infra-packages.yml  release-npm.yml  release.yml  rust.yml
.opencode/commands/: playbook-live-debug.md
.opencode/skills/: playbook-live-debug
apps/android/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
docs/: bpdl-spec.md  command-cookbook.md  command-migration-matrix.md  concepts.md  config-profiles.md  config.md  distribution.md  docs-snippet-tags.md  images.md  kiosk.md  mobile-adr-0001-ui-and-shared-core.md  mobile-ffi-contract.md  mobile-m0-architecture.md  operations.md  performance-metrics.md  playbooks.md  plugin-architecture.md  plugin-game-day.md  plugin-ops.md  plugin-perf-troubleshooting.md  plugin-performance-usability-gates.md  plugin-triage-playbook.md  plugin-versioning.md  plugins.md  runtime-action-migration.md  setup-guide.md  slots.md  troubleshooting.md
docs/perf-baselines/: README.md  baseline-metadata.json  plugin-command-latency.json  variance-policy.json
examples/hello-plugin/: Cargo.toml  README.md  plugin.toml
examples/hello-plugin/src/: lib.rs
examples/native-plugin/: Cargo.toml  README.md  plugin.toml
examples/native-plugin/src/: lib.rs
examples/process-plugin-node/: README.md  plugin.js  plugin.toml
examples/process-plugin-python/: README.md  plugin.py  plugin.toml
examples/prompt-plugin-showcase/: Cargo.toml  README.md
examples/prompt-plugin-showcase/src/: main.rs
examples/prompt-showcase/: Cargo.toml  README.md
examples/prompt-showcase/src/: main.rs
infra/terraform/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
infra/wrangler/: wrangler.toml
npm/: README.md
perf/: README.md  attach-tab-switch.toml  codec-payloads.toml  core-services.toml  generic-ipc.toml  plugin-hot-path.toml  profiles.toml
plugins/clients-plugin/: Cargo.toml  README.md  plugin.toml
plugins/clients-plugin-api/: Cargo.toml  README.md
plugins/clients-plugin-api/bpdl/: clients-plugin.bpdl
plugins/clients-plugin-api/src/: follow_state.rs  lib.rs  typed_client.rs
plugins/clients-plugin-api/tests/: smoke.rs
plugins/clients-plugin/src/: follow_state.rs  lib.rs
plugins/clipboard-plugin/: Cargo.toml  README.md  plugin.toml
plugins/clipboard-plugin/src/: lib.rs
plugins/cluster-plugin/: Cargo.toml  README.md  plugin.toml
plugins/cluster-plugin/src/: domain_ipc.rs  lib.rs
plugins/contexts-plugin/: Cargo.toml  README.md  plugin.toml
plugins/contexts-plugin/src/: context_state.rs  lib.rs
plugins/control-catalog-plugin/: Cargo.toml  README.md  plugin.toml
plugins/control-catalog-plugin/src/: lib.rs
plugins/decoration-plugin/: Cargo.toml  README.md  plugin.toml
plugins/decoration-plugin-renderer/: Cargo.toml  README.md
plugins/decoration-plugin-renderer/src/: lib.rs
plugins/decoration-plugin/assets/decorations/: cpu_heat.lua  pulse.lua  rainbow_snake.lua
plugins/decoration-plugin/assets/themes/: cyberpunk.toml  hacker.toml  minimal.toml  pulse-demo.toml
plugins/decoration-plugin/src/: glyphs.rs  lib.rs  scripting.rs
plugins/pane-runtime-plugin/: Cargo.toml  README.md  plugin.toml
plugins/pane-runtime-plugin/src/: lib.rs
plugins/pane-runtime-plugin/src/handlers/: attach_commands.rs  attach_state.rs  mod.rs  pane_commands.rs  pane_state.rs
plugins/performance-plugin/: Cargo.toml  README.md  plugin.toml
plugins/performance-plugin-api/: Cargo.toml  README.md
plugins/performance-plugin-api/src/: lib.rs  typed_client.rs
plugins/performance-plugin/src/: lib.rs
plugins/permissions-plugin/: Cargo.toml  README.md  plugin.toml
plugins/permissions-plugin/src/: lib.rs
plugins/plugin-cli-plugin/: Cargo.toml  README.md  build.rs  plugin.toml
plugins/plugin-cli-plugin/src/: doctor.rs  lib.rs  list_cmd.rs  rebuild.rs  run_cmd.rs  suggest.rs
plugins/prompted-actions-plugin/: Cargo.toml  plugin.toml
plugins/prompted-actions-plugin/src/: config.rs  lib.rs  sequence.rs
plugins/recording-plugin/: Cargo.toml  README.md  plugin.toml
plugins/recording-plugin-api/: Cargo.toml  README.md
plugins/recording-plugin-api/src/: lib.rs  offline_prune.rs  recording_runtime.rs  typed_client.rs
plugins/recording-plugin/src/: lib.rs  recording_runtime.rs
plugins/sessions-plugin/: Cargo.toml  README.md  plugin.toml
plugins/sessions-plugin/src/: lib.rs  session_manager.rs
plugins/snapshot-plugin/: Cargo.toml  README.md  plugin.toml
plugins/snapshot-plugin-api/: Cargo.toml  README.md
plugins/snapshot-plugin-api/src/: envelope.rs  lib.rs  offline_snapshot.rs  typed_client.rs
plugins/snapshot-plugin/src/: envelope.rs  lib.rs  orchestrator.rs
plugins/theme-plugin/: Cargo.toml  README.md  plugin.toml
plugins/theme-plugin/assets/themes/: cpu-heat.toml  cyberpunk.toml  hacker.toml  minimal.toml  mode-aware.toml  pulse-demo.toml  rainbow-snake.toml
plugins/theme-plugin/src/: lib.rs
plugins/windows-plugin/: Cargo.toml  README.md  plugin.toml
plugins/windows-plugin/src/: domain_ipc.rs  lib.rs
scripts/: codeql-scan.sh  compat-matrix.sh  install-example-plugin.sh  install-terminfo.sh  perf-attach-scenario-matrix.sh  perf-attach-tab-switch.sh  perf-baseline-metadata.sh  perf-core-services.sh  perf-plugin-artifact-compare.sh  perf-plugin-command-latency.sh  perf-plugin-debug-release-matrix.sh  perf-plugin-hot-path.sh  perf-plugin-runtime-matrix.sh  perf-plugin-variance.sh  perf-variance-policy-check.sh  plugin-game-day.sh  plugin-runtime-ci-matcher.sh  rebuild-bundled-plugins.sh  sandbox-bundle-regression.sh  smoke-pty-runtime.sh  test-plugin-runtime-ci-matcher.sh  update-bundled-fonts.sh
terminfo/: bmux-256color.terminfo
(+86 files in other folders)
