[workspace]
members = [
    "packages/bmux",
    "packages/cli",
    "packages/client",
    "packages/config",
    "packages/event",
    "packages/event/models",
    "packages/history",
    "packages/keybind",
    "packages/plugin",
    "packages/search",
    "packages/server",
    "packages/session",
    "packages/session/models",
    "packages/terminal",
    "packages/terminal/models",
]

resolver = "2"

[workspace.metadata.cargo-machete]
ignored = ["log"]

[profile.release]
codegen-units = 1
lto           = false
opt-level     = 3
strip         = "symbols"

[profile.debug-release]
debug    = true
inherits = "release"
strip    = "none"

[profile.release-lto]
inherits = "release"
lto      = "fat"

[profile.release-lto-no-panic]
inherits = "release-lto"
panic    = "abort"

[profile.small]
inherits  = "release-lto-no-panic"
opt-level = "z"

[profile.fast]
inherits  = "dev"
opt-level = 0

[workspace.package]
authors    = ["Braden Steffaniak"]
edition    = "2024"
license    = "MPL-2.0"
repository = "https://github.com/BSteffaniak/bmux"
version    = "0.0.1-alpha.0"

[workspace.dependencies]
# Internal bmux packages
bmux                 = { version = "0.0.1-alpha.0", default-features = false, path = "packages/bmux" }
bmux_cli             = { version = "0.0.1-alpha.0", default-features = false, path = "packages/cli" }
bmux_client          = { version = "0.0.1-alpha.0", default-features = false, path = "packages/client" }
bmux_config          = { version = "0.0.1-alpha.0", default-features = false, path = "packages/config" }
bmux_event           = { version = "0.0.1-alpha.0", default-features = false, path = "packages/event" }
bmux_event_models    = { version = "0.0.1-alpha.0", default-features = false, path = "packages/event/models" }
bmux_history         = { version = "0.0.1-alpha.0", default-features = false, path = "packages/history" }
bmux_keybind         = { version = "0.0.1-alpha.0", default-features = false, path = "packages/keybind" }
bmux_plugin          = { version = "0.0.1-alpha.0", default-features = false, path = "packages/plugin" }
bmux_search          = { version = "0.0.1-alpha.0", default-features = false, path = "packages/search" }
bmux_server          = { version = "0.0.1-alpha.0", default-features = false, path = "packages/server" }
bmux_session         = { version = "0.0.1-alpha.0", default-features = false, path = "packages/session" }
bmux_session_models  = { version = "0.0.1-alpha.0", default-features = false, path = "packages/session/models" }
bmux_terminal        = { version = "0.0.1-alpha.0", default-features = false, path = "packages/terminal" }
bmux_terminal_models = { version = "0.0.1-alpha.0", default-features = false, path = "packages/terminal/models" }

# External dependencies
anyhow             = { version = "1.0.98", default-features = false }
clap               = { version = "4.5.40", default-features = false }
crossterm          = { version = "0.29.0", default-features = false }
dirs               = { version = "6.0.0", default-features = false }
futures            = { version = "0.3.31", default-features = false }
serde              = { version = "1.0.219", default-features = false }
thiserror          = { version = "2.0.12", default-features = false }
tokio              = { version = "1.45.1", default-features = false }
toml               = { version = "0.8.23", default-features = false }
tracing            = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false }
uuid               = { version = "1.17.0", default-features = false }

[patch.crates-io]
