[workspace]
members = [
    "examples/native-plugin",
    "packages/bmux",
    "packages/cli_output",
    "packages/cli",
    "packages/client",
    "packages/clipboard",
    "packages/config",
    "packages/event",
    "packages/event/models",
    "packages/ipc",
    "packages/keybind",
    "packages/plugin",
    "packages/server",
    "packages/session",
    "packages/session/models",
    "packages/terminal",
    "packages/terminal/models",
    "packages/terminal_protocol",
    "plugins/clipboard-plugin",
    "plugins/plugin-cli-plugin",
    "plugins/permissions-plugin",
    "plugins/windows-plugin",
]

resolver = "2"

[workspace.metadata.cargo-machete]
ignored = ["log"]

[profile.release]
codegen-units = 1
lto           = false
opt-level     = 3
strip         = "symbols"

[profile.debug-release]
debug    = true
inherits = "release"
strip    = "none"

[profile.release-lto]
inherits = "release"
lto      = "fat"

[profile.release-lto-no-panic]
inherits = "release-lto"
panic    = "abort"

[profile.small]
inherits  = "release-lto-no-panic"
opt-level = "z"

[profile.fast]
inherits  = "dev"
opt-level = 0

[workspace.package]
authors    = ["Braden Steffaniak"]
edition    = "2024"
license    = "MPL-2.0"
repository = "https://github.com/BSteffaniak/bmux"
version    = "0.0.1-alpha.0"

[workspace.dependencies]
# Internal bmux packages
bmux                   = { version = "0.0.1-alpha.0", default-features = false, path = "packages/bmux" }
bmux_cli               = { version = "0.0.1-alpha.0", default-features = false, path = "packages/cli" }
bmux_cli_output        = { version = "0.0.1-alpha.0", default-features = false, path = "packages/cli_output" }
bmux_client            = { version = "0.0.1-alpha.0", default-features = false, path = "packages/client" }
bmux_clipboard         = { version = "0.0.1-alpha.0", default-features = false, path = "packages/clipboard" }
bmux_config            = { version = "0.0.1-alpha.0", default-features = false, path = "packages/config" }
bmux_event             = { version = "0.0.1-alpha.0", default-features = false, path = "packages/event" }
bmux_event_models      = { version = "0.0.1-alpha.0", default-features = false, path = "packages/event/models" }
bmux_ipc               = { version = "0.0.1-alpha.0", default-features = false, path = "packages/ipc" }
bmux_keybind           = { version = "0.0.1-alpha.0", default-features = false, path = "packages/keybind" }
bmux_plugin            = { version = "0.0.1-alpha.0", default-features = false, path = "packages/plugin" }
bmux_server            = { version = "0.0.1-alpha.0", default-features = false, path = "packages/server" }
bmux_session           = { version = "0.0.1-alpha.0", default-features = false, path = "packages/session" }
bmux_session_models    = { version = "0.0.1-alpha.0", default-features = false, path = "packages/session/models" }
bmux_terminal          = { version = "0.0.1-alpha.0", default-features = false, path = "packages/terminal" }
bmux_terminal_models   = { version = "0.0.1-alpha.0", default-features = false, path = "packages/terminal/models" }
bmux_terminal_protocol = { version = "0.0.1-alpha.0", default-features = false, path = "packages/terminal_protocol" }
moosicbox_log_runtime  = { git = "https://github.com/MoosicBox/MoosicBox", branch = "master", package = "moosicbox_log_runtime", default-features = false }
moosicbox_log_watch    = { git = "https://github.com/MoosicBox/MoosicBox", branch = "master", package = "moosicbox_log_watch", default-features = false }

# External dependencies
ab_glyph = { version = "0.2.32" }
anyhow = { version = "1.0.98", default-features = false }
clap = { version = "4.5.40", default-features = false }
crossterm = { version = "0.29.0", default-features = false }
dirs = { version = "6.0.0", default-features = false }
font8x8 = { version = "0.3.1", features = ["unicode"] }
fontdb = { version = "0.23.0" }
futures = { version = "0.3.31", default-features = false }
gif = { version = "0.13.3" }
libloading = { version = "0.8.9", default-features = false }
portable-pty = { version = "0.9.0" }
postcard = { version = "1.1.3", default-features = false }
ratatui = { version = "0.28.1", default-features = false, features = [
    "crossterm",
] }
regex = { version = "1.12.2", default-features = false, features = ["std"] }
resvg = { version = "0.45.1", default-features = true }
semver = { version = "1.0.26", default-features = false, features = ["std"] }
serde = { version = "1.0.219", default-features = false, features = ["std"] }
serde_json = { version = "1.0.143", default-features = false, features = [
    "std",
] }
serial_test = { version = "3.4.0", default-features = false }
thiserror = { version = "2.0.12", default-features = false }
time = { version = "0.3.47", default-features = false }
tokio = { version = "1.45.1", default-features = false }
toml = { version = "0.8.23", default-features = false, features = ["display"] }
tracing = { version = "0.1.44", default-features = false }
tracing-appender = { version = "0.2.3", default-features = false }
tracing-subscriber = { version = "0.3.23", default-features = false }
unicode-width = { version = "0.2.2", default-features = false }
uuid = { version = "1.21.0", default-features = false }
vt100 = { version = "0.16.2", default-features = false }

# [patch.crates-io]

# [patch."https://github.com/MoosicBox/MoosicBox"]
# moosicbox_log_runtime = { path = "../MoosicBox/packages/log_runtime" }
# moosicbox_log_watch   = { path = "../MoosicBox/packages/log_watch" }
