[workspace]
members = [
    "examples/hello-plugin",
    "examples/native-plugin",
    "examples/prompt-showcase",
    "examples/prompt-plugin-showcase",
    "packages/attach_pipeline",
    "packages/attach_pipeline/models",
    "packages/bmux",
    "packages/codec",
    "packages/fonts",
    "packages/cli_output",
    "packages/cli",
    "packages/cli-schema",
    "packages/client",
    "packages/clipboard",
    "packages/config",
    "packages/config-doc",
    "packages/config-doc-derive",
    "packages/event",
    "packages/event/models",
    "packages/ipc",
    "packages/keybind",
    "packages/plugin",
    "packages/plugin-schema",
    "packages/plugin-schema-macros",
    "packages/plugin-sdk",
    "packages/perf-tools",
    "packages/server",
    "packages/session",
    "packages/session/models",
    "packages/sandbox-harness",
    "packages/slots",
    "packages/bmux-env",
    "packages/terminal",
    "packages/terminal/models",
    "packages/terminal_protocol",
    "packages/keyboard",
    "packages/mobile-core",
    "packages/mobile-ffi",
    "packages/image",
    "packages/docs-site",
    "packages/docs-site/ui",
    "plugins/clipboard-plugin",
    "plugins/cluster-plugin",
    "plugins/plugin-cli-plugin",
    "plugins/permissions-plugin",
    "plugins/prompted-actions-plugin",
    "plugins/windows-plugin",
    "plugins/windows-plugin-api",
]

resolver = "2"

[workspace.metadata.cargo-machete]
ignored = ["log"]

[profile.release]
codegen-units = 1
lto           = false
opt-level     = 3
strip         = "symbols"

[profile.debug-release]
debug    = true
inherits = "release"
strip    = "none"

[profile.release-lto]
inherits = "release"
lto      = "fat"

[profile.release-lto-no-panic]
inherits = "release-lto"
panic    = "abort"

[profile.small]
inherits  = "release-lto-no-panic"
opt-level = "z"

[profile.fast]
inherits  = "dev"
opt-level = 0

[workspace.package]
authors    = ["Braden Steffaniak"]
edition    = "2024"
license    = "MPL-2.0"
repository = "https://github.com/BSteffaniak/bmux"
version    = "0.0.1-alpha.0"

[workspace.dependencies]
# Internal bmux packages
bmux                        = { version = "0.0.1-alpha.0", default-features = false, path = "packages/bmux" }
bmux_attach_pipeline        = { version = "0.0.1-alpha.0", default-features = false, path = "packages/attach_pipeline" }
bmux_attach_pipeline_models = { version = "0.0.1-alpha.0", default-features = false, path = "packages/attach_pipeline/models" }
bmux_cli                    = { version = "0.0.1-alpha.0", default-features = false, path = "packages/cli" }
bmux_cli_output             = { version = "0.0.1-alpha.0", default-features = false, path = "packages/cli_output" }
bmux_cli_schema             = { version = "0.0.1-alpha.0", default-features = false, path = "packages/cli-schema" }
bmux_client                 = { version = "0.0.1-alpha.0", default-features = false, path = "packages/client" }
bmux_clipboard              = { version = "0.0.1-alpha.0", default-features = false, path = "packages/clipboard" }
bmux_codec                  = { version = "0.0.1-alpha.0", default-features = false, path = "packages/codec" }
bmux_config                 = { version = "0.0.1-alpha.0", default-features = false, path = "packages/config" }
bmux_config_doc             = { version = "0.0.1-alpha.0", default-features = false, path = "packages/config-doc" }
bmux_config_doc_derive      = { version = "0.0.1-alpha.0", default-features = false, path = "packages/config-doc-derive" }
bmux_env                    = { version = "0.0.1-alpha.0", default-features = false, path = "packages/bmux-env" }
bmux_event                  = { version = "0.0.1-alpha.0", default-features = false, path = "packages/event" }
bmux_event_models           = { version = "0.0.1-alpha.0", default-features = false, path = "packages/event/models" }
bmux_fonts                  = { version = "0.0.1-alpha.0", default-features = false, path = "packages/fonts" }
bmux_image                  = { version = "0.0.1-alpha.0", default-features = false, path = "packages/image" }
bmux_ipc                    = { version = "0.0.1-alpha.0", default-features = false, path = "packages/ipc" }
bmux_keybind                = { version = "0.0.1-alpha.0", default-features = false, path = "packages/keybind" }
bmux_keyboard               = { version = "0.0.1-alpha.0", default-features = false, path = "packages/keyboard" }
bmux_mobile_core            = { version = "0.0.1-alpha.0", default-features = false, path = "packages/mobile-core" }
bmux_mobile_ffi             = { version = "0.0.1-alpha.0", default-features = false, path = "packages/mobile-ffi" }
bmux_plugin                 = { version = "0.0.1-alpha.0", default-features = false, path = "packages/plugin" }
bmux_plugin_schema          = { version = "0.0.1-alpha.0", default-features = false, path = "packages/plugin-schema" }
bmux_plugin_schema_macros   = { version = "0.0.1-alpha.0", default-features = false, path = "packages/plugin-schema-macros" }
bmux_plugin_sdk             = { version = "0.0.1-alpha.0", default-features = false, path = "packages/plugin-sdk" }
bmux_sandbox_harness        = { version = "0.0.1-alpha.0", default-features = false, path = "packages/sandbox-harness" }
bmux_server                 = { version = "0.0.1-alpha.0", default-features = false, path = "packages/server" }
bmux_session                = { version = "0.0.1-alpha.0", default-features = false, path = "packages/session" }
bmux_session_models         = { version = "0.0.1-alpha.0", default-features = false, path = "packages/session/models" }
bmux_slots                  = { version = "0.0.1-alpha.0", default-features = false, path = "packages/slots" }
bmux_terminal               = { version = "0.0.1-alpha.0", default-features = false, path = "packages/terminal" }
bmux_terminal_models        = { version = "0.0.1-alpha.0", default-features = false, path = "packages/terminal/models" }
bmux_terminal_protocol      = { version = "0.0.1-alpha.0", default-features = false, path = "packages/terminal_protocol" }

# Bundled plugin crates (used as optional rlib deps in bmux_cli)
bmux_clipboard_plugin        = { version = "0.0.1-alpha.0", default-features = false, path = "plugins/clipboard-plugin" }
bmux_cluster_plugin          = { version = "0.0.1-alpha.0", default-features = false, path = "plugins/cluster-plugin" }
bmux_permissions_plugin      = { version = "0.0.1-alpha.0", default-features = false, path = "plugins/permissions-plugin" }
bmux_plugin_cli_plugin       = { version = "0.0.1-alpha.0", default-features = false, path = "plugins/plugin-cli-plugin" }
bmux_prompted_actions_plugin = { version = "0.0.1-alpha.0", default-features = false, path = "plugins/prompted-actions-plugin" }
bmux_windows_plugin          = { version = "0.0.1-alpha.0", default-features = false, path = "plugins/windows-plugin" }
bmux_windows_plugin_api      = { version = "0.0.1-alpha.0", default-features = false, path = "plugins/windows-plugin-api" }

# Docs site crates
bmux_docs_site_ui = { version = "0.0.1-alpha.0", default-features = false, path = "packages/docs-site/ui" }

hyperchad                    = { git = "https://github.com/MoosicBox/MoosicBox", branch = "master", package = "hyperchad", default-features = false }
hyperchad_color              = { git = "https://github.com/MoosicBox/MoosicBox", branch = "master", package = "hyperchad_color", default-features = false }
hyperchad_renderer           = { git = "https://github.com/MoosicBox/MoosicBox", branch = "master", package = "hyperchad_renderer", default-features = false }
hyperchad_template           = { git = "https://github.com/MoosicBox/MoosicBox", branch = "master", package = "hyperchad_template", default-features = false }
hyperchad_transformer        = { git = "https://github.com/MoosicBox/MoosicBox", branch = "master", package = "hyperchad_transformer", default-features = false }
hyperchad_transformer_models = { git = "https://github.com/MoosicBox/MoosicBox", branch = "master", package = "hyperchad_transformer_models", default-features = false }

switchy = { git = "https://github.com/MoosicBox/MoosicBox", branch = "master", package = "switchy", default-features = false }

moosicbox_log_runtime = { git = "https://github.com/MoosicBox/MoosicBox", branch = "master", package = "moosicbox_log_runtime", default-features = false }
moosicbox_log_watch   = { git = "https://github.com/MoosicBox/MoosicBox", branch = "master", package = "moosicbox_log_watch", default-features = false }

git_sshripped_recipient    = { version = "0.4.1", default-features = false }
git_sshripped_ssh_agent    = { version = "0.4.1", default-features = false }
git_sshripped_ssh_identity = { version = "0.4.1", default-features = false }

# External dependencies
ab_glyph = { version = "0.2.32" }
anyhow = { version = "1.0.98", default-features = false }
clap = { version = "4.5.40", default-features = false }
crossterm = { version = "0.29.0", default-features = false }
dirs = { version = "6.0.0", default-features = false }
env_logger = { version = "0.11.10", default-features = false }
font8x8 = { version = "0.3.1", features = ["unicode"] }
fontdb = { version = "0.23.0" }
futures = { version = "0.3.31", default-features = false }
gif = { version = "0.13.3" }
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "bmp",
] }
iroh = { version = "0.97.0", default-features = true }
libc = { version = "0.2" }
libloading = { version = "0.8.9", default-features = false }
log = { version = "0.4.29", default-features = false }
lz4_flex = { version = "0.11", default-features = false }
portable-pty = { version = "0.9.0" }
proc-macro2 = { version = "1.0.106", default-features = false }
qrcode = { version = "0.14.1", default-features = false }
quote = { version = "1.0.45", default-features = false }
rcgen = { version = "0.13.2", default-features = false, features = [
    "pem",
    "ring",
] }
regex = { version = "1.12.2", default-features = false, features = ["std"] }
reqwest = { version = "0.12.28", default-features = false, features = [
    "json",
    "rustls-tls",
] }
resvg = { version = "0.45.1", default-features = true }
rustls = { version = "0.23.16", default-features = false, features = [
    "std",
    "ring",
] }
rustls-native-certs = { version = "0.8.1", default-features = false }
rustls-pemfile = { version = "2.2.0", default-features = false, features = [
    "std",
] }
semver = { version = "1.0.26", default-features = false, features = ["std"] }
serde = { version = "1.0.219", default-features = false, features = ["std"] }
serde_json = { version = "1.0.143", default-features = false, features = [
    "std",
] }
sha2 = { version = "0.10.9", default-features = false, features = ["std"] }
similar = { version = "2.7.0" }
ssh2 = { version = "0.9.5" }
syn = { version = "2.0.117", default-features = false }
tempfile = { version = "3.27.0", default-features = false }
thiserror = { version = "2.0.12", default-features = false }
time = { version = "0.3.47", default-features = false }
tokio = { version = "1.45.1", default-features = false }
tokio-rustls = { version = "0.26.1", default-features = false }
toml = { version = "0.8.23", default-features = false, features = ["display"] }
toml_edit = { version = "0.22.26", default-features = false, features = [
    "parse",
    "display",
] }
tracing = { version = "0.1.44", default-features = false }
ttf-parser = { version = "0.25.1", default-features = true }
unicode-width = { version = "0.2.2", default-features = false }
uniffi = { version = "0.31.0" }
uuid = { version = "1.21.0", default-features = false }
vt100 = { version = "0.16.2", default-features = false }
windows-sys = { version = "0.61.2" }
zstd = { version = "0.13", default-features = false }

# Dev/test dependencies
serial_test = { version = "3.4.0" }

# [patch.crates-io]

# [patch."https://github.com/MoosicBox/MoosicBox"]
# moosicbox_log_runtime = { path = "../MoosicBox/packages/log_runtime" }
# moosicbox_log_watch   = { path = "../MoosicBox/packages/log_watch" }

# [patch.crates-io]
# git_sshripped_recipient    = { path = "../git-ssh-crypt/packages/recipient" }
# git_sshripped_ssh_agent    = { path = "../git-ssh-crypt/packages/ssh_agent" }
# git_sshripped_ssh_identity = { path = "../git-ssh-crypt/packages/ssh_identity" }
