[package]
authors     = { workspace = true }
description = "Minimal hello-world bmux plugin example"
edition     = { workspace = true }
license     = { workspace = true }
name        = "bmux_hello_plugin"
publish     = false
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bmux_plugin_sdk = { workspace = true }

[features]
fail-on-warnings = []
static-bundled   = []
