[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "Minimal hello-world bmux plugin example"
edition     = { workspace = true }
keywords    = ["bmux", "example", "plugin"]
license     = { workspace = true }
name        = "bmux_hello_plugin"
publish     = false
readme      = "README.md"
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bmux_plugin_sdk = { workspace = true }

[features]
fail-on-warnings = ["bmux_plugin_sdk/fail-on-warnings"]
static-bundled   = []
