[package]
authors     = { workspace = true }
description = "Example native bmux plugin"
edition     = { workspace = true }
license     = { workspace = true }
name        = "bmux_example_native_plugin"
publish     = false
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bmux_cli_output = { workspace = true }
bmux_client     = { workspace = true }
bmux_config     = { workspace = true }
bmux_ipc        = { workspace = true }
bmux_plugin     = { workspace = true }
serde           = { workspace = true, features = ["derive", "std"] }
serde_json      = { workspace = true }
tokio           = { workspace = true, features = ["rt-multi-thread"] }
toml            = { workspace = true, features = ["parse"] }
uuid            = { workspace = true, features = ["std"] }

[features]
fail-on-warnings = []
static-bundled   = []
