[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "Example native bmux plugin"
edition     = { workspace = true }
keywords    = ["bmux", "example", "native", "plugin"]
license     = { workspace = true }
name        = "bmux_example_native_plugin"
publish     = false
readme      = "README.md"
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bmux_cli_output = { workspace = true }
bmux_client     = { workspace = true }
bmux_config     = { workspace = true }
bmux_ipc        = { workspace = true }
bmux_plugin     = { workspace = true }
bmux_plugin_sdk = { workspace = true }
serde           = { workspace = true, features = ["derive", "std"] }
serde_json      = { workspace = true }
tokio           = { workspace = true, features = ["rt-multi-thread"] }
toml            = { workspace = true, features = ["parse"] }
uuid            = { workspace = true, features = ["std"] }

[features]
fail-on-warnings = [
    "bmux_cli_output/fail-on-warnings",
    "bmux_client/fail-on-warnings",
    "bmux_config/fail-on-warnings",
    "bmux_ipc/fail-on-warnings",
    "bmux_plugin/fail-on-warnings",
    "bmux_plugin_sdk/fail-on-warnings",
]
static-bundled = []

[dev-dependencies]
bmux_plugin = { workspace = true }
