[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "Interactive bmux plugin-provided prompt showcase example"
edition     = { workspace = true }
keywords    = ["bmux", "example", "plugin", "prompt", "sandbox"]
license     = { workspace = true }
name        = "bmux_prompt_plugin_showcase"
publish     = false
readme      = "README.md"
repository  = { workspace = true }
version     = { workspace = true }

[dependencies]
anyhow                     = { workspace = true, features = ["std"] }
bmux_cli                   = { workspace = true }
bmux_example_native_plugin = { path = "../native-plugin" }
bmux_sandbox_harness       = { workspace = true }
tokio                      = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
fail-on-warnings = [
    "bmux_cli/fail-on-warnings",
    "bmux_example_native_plugin/fail-on-warnings",
    "bmux_sandbox_harness/fail-on-warnings",
]
