[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "Interactive bmux plugin-provided prompt showcase example"
edition     = { workspace = true }
keywords    = ["bmux", "example", "plugin", "prompt", "sandbox"]
license     = { workspace = true }
name        = "bmux_prompt_plugin_showcase"
publish     = false
readme      = "README.md"
repository  = { workspace = true }
version     = { workspace = true }

[dependencies]
anyhow                     = { workspace = true, features = ["std"] }
bmux_cli                   = { workspace = true }
bmux_client                = { workspace = true }
bmux_codec                 = { workspace = true }
bmux_example_native_plugin = { path = "../native-plugin" }
bmux_ipc                   = { workspace = true }
bmux_sandbox_harness       = { workspace = true }
bmux_sessions_plugin_api   = { workspace = true }
serde                      = { workspace = true, features = ["derive", "std"] }
tokio                      = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid                       = { workspace = true, features = ["std"] }

[features]
fail-on-warnings = [
    "bmux_cli/fail-on-warnings",
    "bmux_example_native_plugin/fail-on-warnings",
    "bmux_sandbox_harness/fail-on-warnings",
]
