[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "Interactive bmux prompt showcase example"
edition     = { workspace = true }
keywords    = ["bmux", "example", "prompt", "sandbox"]
license     = { workspace = true }
name        = "bmux_prompt_showcase"
publish     = false
readme      = "README.md"
repository  = { workspace = true }
version     = { workspace = true }

[dependencies]
anyhow                   = { workspace = true, features = ["std"] }
bmux_cli                 = { workspace = true }
bmux_client              = { workspace = true }
bmux_codec               = { workspace = true }
bmux_ipc                 = { workspace = true }
bmux_sandbox_harness     = { workspace = true }
bmux_sessions_plugin_api = { workspace = true }
serde                    = { workspace = true, features = ["derive", "std"] }
tokio                    = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
uuid                     = { workspace = true, features = ["std"] }

[features]
fail-on-warnings = [
    "bmux_cli/fail-on-warnings",
    "bmux_sandbox_harness/fail-on-warnings",
]
