[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "Typed public API of the bmux clients plugin (BPDL-generated bindings)"
edition     = { workspace = true }
keywords    = ["bmux", "plugin", "api", "clients"]
license     = { workspace = true }
name        = "bmux_clients_plugin_api"
readme      = "README.md"
repository  = { workspace = true }
version     = { workspace = true }

[dependencies]
bmux_ipc                  = { workspace = true }
bmux_plugin_schema_macros = { workspace = true }
bmux_plugin_sdk           = { workspace = true }
serde                     = { workspace = true, features = ["derive", "std"] }
thiserror                 = { workspace = true }
uuid                      = { workspace = true, features = ["serde", "std"] }

[dev-dependencies]
serde_json = { workspace = true }

[package.metadata.cargo-machete]
# Nothing ignored — all deps are used directly in non-macro source.

[features]
default          = []
fail-on-warnings = []
