[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "Shipped clipboard plugin for bmux"
edition     = { workspace = true }
keywords    = ["bmux", "clipboard", "plugin"]
license     = { workspace = true }
name        = "bmux_clipboard_plugin"
publish     = false
readme      = "README.md"
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bmux_clipboard  = { workspace = true }
bmux_plugin_sdk = { workspace = true }
serde           = { workspace = true, features = ["derive", "std"] }

[features]
fail-on-warnings = [
    "bmux_clipboard/fail-on-warnings",
    "bmux_plugin_sdk/fail-on-warnings",
]
static-bundled = []
