[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "Shipped server clusters plugin for bmux"
edition     = { workspace = true }
keywords    = ["bmux", "plugin", "cluster"]
license     = { workspace = true }
name        = "bmux_cluster_plugin"
publish     = false
readme      = "README.md"
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bmux_config     = { workspace = true }
bmux_ipc        = { workspace = true }
bmux_plugin     = { workspace = true }
bmux_plugin_sdk = { workspace = true }
serde           = { workspace = true, features = ["derive", "std"] }
serde_json      = { workspace = true }
tokio           = { workspace = true, features = ["rt", "rt-multi-thread"] }
toml            = { workspace = true }
uuid            = { workspace = true, features = ["std"] }

[features]
fail-on-warnings = [
    "bmux_config/fail-on-warnings",
    "bmux_ipc/fail-on-warnings",
    "bmux_plugin/fail-on-warnings",
    "bmux_plugin_sdk/fail-on-warnings",
]
static-bundled = []

[dev-dependencies]
uuid = { workspace = true }
