[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "Shipped contexts plugin for bmux"
edition     = { workspace = true }
keywords    = ["bmux", "plugin", "contexts"]
license     = { workspace = true }
name        = "bmux_contexts_plugin"
publish     = false
readme      = "README.md"
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bmux_clients_plugin_api  = { workspace = true }
bmux_context_state       = { workspace = true }
bmux_contexts_plugin_api = { workspace = true }
bmux_ipc                 = { workspace = true }
bmux_plugin              = { workspace = true }
bmux_plugin_sdk          = { workspace = true }
bmux_session_models      = { workspace = true, features = ["serde"] }
bmux_sessions_plugin_api = { workspace = true }
bmux_snapshot_runtime    = { workspace = true }
serde                    = { workspace = true, features = ["derive", "std"] }
serde_json               = { workspace = true }
uuid                     = { workspace = true, features = ["serde", "std"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[features]
fail-on-warnings = [
    "bmux_plugin/fail-on-warnings",
    "bmux_plugin_sdk/fail-on-warnings",
]
static-bundled = []
