[package]
authors     = { workspace = true }
categories  = ["development-tools"]
description = "Shipped control-catalog plugin for bmux"
edition     = { workspace = true }
keywords    = ["bmux", "plugin", "catalog"]
license     = { workspace = true }
name        = "bmux_control_catalog_plugin"
publish     = false
readme      = "README.md"
repository  = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bmux_clients_plugin_api         = { workspace = true }
bmux_contexts_plugin            = { workspace = true }
bmux_contexts_plugin_api        = { workspace = true }
bmux_control_catalog_plugin_api = { workspace = true }
bmux_plugin                     = { workspace = true }
bmux_plugin_sdk                 = { workspace = true }
bmux_sessions_plugin            = { workspace = true }
bmux_sessions_plugin_api        = { workspace = true }
serde                           = { workspace = true, features = ["derive", "std"] }

[features]
fail-on-warnings = [
    "bmux_plugin/fail-on-warnings",
    "bmux_plugin_sdk/fail-on-warnings",
]
static-bundled = []
